# rocket2025-backend

./: .clinerules  .dockerignore  .gitignore  .vercelignore  BINARY_DATA_HANDLING.md  CLAUDE.md  DOCKER_OPTIMIZATION.md  Dockerfile  Dockerfile.improved  GAS_SETUP_GUIDE.md  README.md  README_PAYPAY.md  README_USER_RECORDS.md  README_USER_RECORDS_API.md  README_pizza_api.md  RUNPOD_DEPLOY.md  docker-compose.optimization.yml  docker-compose.yml  entrypoint.sh  hello.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  runpod_handler.py  save_pizza_results.sh  set_env.sh  vercel.yaml
api/: index.py
gas/: .clasp.json  Code.gs  README.md  SpreadsheetService.gs  appsscript.json
service/: pizza_segmentation_service.py  salami_segmentation_service.py
src/: __init__.py  encoder_patch.py  main.py  middleware.py
src/api/: __init__.py  calculate_ideal_cut.py  emotion_recognition_router.py  face_emotion_router.py  face_find_router.py  hoge.py  paypay_router.py  pizza_cutter_router.py  pizza_score_router.py  user_record_router.py
src/service/: __init__.py
src/test/: batch_process.py  debug.py  debug_corrected.py  debug_simple.py  debug_texture_analysis.py  diagnose_api_errors.py  test_animated_pizza.py  test_emotion_recognition.py  test_exploded_process.py  test_face_emotion_api.py  test_face_find.py  test_face_find_api.py  test_final_animation.py  test_fixed_animation.py  test_preprocess_debug.py  test_svg_combine.py  test_user_record_api.py  test_user_record_ranking.py  texture_deep_features_analysis.py  texture_investigation.py  (+3 more)
tests/: test_paypay_service.py
(+33 files in other folders)
