[project]
name = "rocket-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
]
